--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 fastapi==0.111.0
 opencv-python==4.10.0.82
 pillow==10.1.0
-tflite-runtime
+--extra-index-url https://google-coral.github.io/py-repo/
+tflite_runtime
 boto3==1.34.122
 requests==2.32.3
