--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
 fastapi==0.111.0
-opencv-python==4.10.0.82
+opencv-python-headless
 pillow==10.1.0
 --extra-index-url https://google-coral.github.io/py-repo/ tflite_runtime
