--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
 fastapi==0.111.0
 opencv-python-headless
 pillow==10.1.0
---extra-index-url https://google-coral.github.io/py-repo/ tflite_runtime
-tflite
+tflite-runtime
